Fix assorted layout bugs

--- a/wp-content/themes/csismag/assets/_scss/pages/single.scss
+++ b/wp-content/themes/csismag/assets/_scss/pages/single.scss
@@ -98,6 +98,7 @@
     bottom: 0;
     left: 0;
     z-index: -1;
+    background-color: $color-primary-darkest;
 
     &::after {
       content: '';
@@ -111,6 +112,7 @@
       background: linear-gradient(0deg, rgba(0, 0, 0, 0.26), rgba(0, 0, 0, 0.26)), linear-gradient(90deg, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0) 67.03%);
     }
 
+    /* stylelint-disable-next-line */
     img {
       object-fit: cover;
       width: 100vw;
